--- a/Startsida2016/bower.json
+++ b/Startsida2016/bower.json
@@ -1,12 +1,19 @@
 {
-  "name": "foundation-ssg",
+  "name": "foundation-sites-template",
   "version": "1.0.0",
   "authors": [
     "ZURB <foundation@zurb.com>"
   ],
-  "description": "Static site generator for Foundation for Sites.",
-  "main": "gulpfile.js",
+  "description": "Basic template for a new Foundation for Sites project.",
+  "main": "index.html",
   "license": "MIT",
+  "homepage": "http://foundation.zurb.com",
+  "dependencies": {
+    "foundation-sites": "~6.1.2",
+    "motion-ui": "~1.1.0",
+    "foundation-sites": "~6.2.0",
+    "motion-ui": "~1.2.2"
+  },
   "ignore": [
     "**/.*",
     "node_modules",
@@ -14,9 +21,5 @@
     "test",
     "tests"
   ],
-  "dependencies": {
-    "foundation-sites": "~6.2.0",
-    "motion-ui": "~1.2.2"
-  },
   "private": true
 }
